[QT][OVERVIEW] Fix Balance Label Color
I tried finding the transaction colors, no luck, but found the balance label was set to white(#fff).

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -890,7 +890,7 @@ QWidget .QFrame#frame .QLabel#label_5 {
 	qproperty-alignment: 'AlignVCenter | AlignRight';
 	min-width:160px;
 	background-color:transparent;
-	color:#fff;
+	color:#333;
 	margin-right:5px;
 	padding-right:5px;
 }
